--- a/css/index.css
+++ b/css/index.css
@@ -385,6 +385,125 @@ nav ul {
 
 
 
+/* -------- START FEATURES --------*/
+
+.features {
+    background-image: url(../image/bg2.png);
+    background-size: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    overflow: hidden;
+}
+
+.features__content {
+    display: flex;
+}
+
+.features__left, .features__right {
+    width: 50%;
+}
+
+.features__banner {
+    margin-right: -80px;
+    /* Đẩy sang trái để để cho lòi ra ngoài .container đang bị maxwidth 1200px 90% */
+}
+
+.features__banner img {
+    width: 100%;
+}
+
+.features__item {
+    padding: 0 50px 30px 0;
+}
+
+.features__item:nth-of-type(2) {
+    padding: 0 0 30px 50px;
+}
+
+.features__bg {
+    box-shadow: 0 0px 60px 0px rgb(0 0 0 / 10%);
+    display: flex;
+    padding: 35px;
+    background-color: #fff;
+    border-radius: 10px;
+    position: relative;
+    /* Tạo containing block cho pseudo-element ::after */
+    overflow: hidden;
+    /* Để ::after không bị tràn ra ngoài */
+}
+
+.features__bg::after {
+    content: "";
+    position: absolute; /* Cần có để z-index hoạt động */
+    /* để ::after tách khỏi flow, để nó nằm đè lên cái cũ chứ ko chiếm chỗ ở kế bến */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    opacity: 0;
+    transition: all 1s;
+}
+
+.features__bg:hover::after {
+    /* z-index: 0 (mặc định) */
+    opacity: 1;
+    /* Khi hover thì ::after sẽ hiện lên */
+}
+
+.features__bg div {
+    padding-left: 25px;
+    z-index: 1; /* để hiện lên trên ::after mặc định có z-index=0 */
+    transition: all 1s;
+}
+
+.features__item i {
+    color: #f55f8d;
+    font-size: 80px;
+    line-height: 1;
+    z-index: 1;
+    transition: all 1s;
+
+}
+
+.features__item h3 {
+    font-weight: 800;
+    color: black;
+    font-size: 24px;
+    transition: all 1s;
+
+}
+
+.features__item:hover i,
+.features__bg:hover h3,
+.features__item:hover div {
+    color: #fff;
+}
+
+.features__banner img {
+    max-width: 100%;
+    animation: move2 5s infinite;
+}
+
+@keyframes move2 {
+    0% {
+        transform: rotate(1deg) translate(2px, 2px);
+    }
+
+    50% {
+        transform: rotate(-1deg) translate(-2px, -2px);
+    }
+
+    100% {
+        transform: rotate(1deg) translate(2px, 2px);
+    }
+}
+
+
+
+/* -------- END FEATURES --------*/
+
 
 
 
