--- a/css/index.css
+++ b/css/index.css
@@ -645,3 +645,80 @@ nav ul {
 }
 
 /* -------- END PORTFOLIO --------*/
+
+
+/* -------- START BLOG --------*/
+
+.blog {
+    background-image: url(../image/bg16.png);
+    background-size: cover;
+    background-position: top center;
+    text-align: center;
+    padding-bottom: 50px;
+}
+
+.blog__item {
+    text-align: center;
+    background: rgba(245, 95, 141, 0.1);
+    border-radius: 8px;
+}
+
+.blog__header {
+    position: relative;
+}
+
+.blog__header img {
+    width: 100%;
+    /* height: 100%; */
+    border-radius: 8px 8px 0 0;
+}
+
+.blog__header p {
+    background-image: linear-gradient(to right, #f55f8d 0, #f8ae56 51%, #f55f8d 100%);
+    background-size: 200%;
+    border-radius: 6px;
+    color: #fff;
+    padding: 10px 20px;
+    position: absolute;
+    bottom: -20px;
+    left: 15px;
+    font-size: 14px;
+}
+
+.blog__body {
+    padding: 30px 15px 40px 15px;
+    line-height: 1.4;
+}
+
+.blog__body h3 {
+    font-size: 24px;
+    font-weight: 700;
+    color: #262626;
+}
+
+.blog__footer {
+    display: flex;
+    padding: 10px;
+    text-transform: uppercase;
+    font-weight: 400;
+    font-size: 14px;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    /* border-top: duong vien tren */
+}
+
+.blog__footer i {
+    color: #f55f8d;
+    font-size: 1.4rem;
+    vertical-align: middle;
+    /* căn giữa icon so với dòng text */
+}
+
+.blog__footer p {
+    margin-right: 20px;
+}
+
+.blog__footer p:first-child span{
+    color: #f55f8d;
+}
+
+/* -------- END BLOG --------*/
