--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 .container {
-    width: 90%;
+    /* width: 90%; */
     max-width: 1200px;
     margin: 0 auto;
 }
@@ -696,12 +696,29 @@ nav ul {
 footer {
     background-image: url(../image/bg4.png);
     background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
     height: auto;
     background-color: #0e1b1f;
     color: #fff;
+    font-size: 15px;
+    display: block;
+    height: auto;
+    position: relative;
 }
 
-footer::before {}
+footer::before {
+    content: "";
+    background-image: url(../image/pattern2.png);
+    background-position: left top;
+    background-repeat: no-repeat;
+    background-size: contain;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
 
 .footer__top {
     display: flex;
@@ -713,6 +730,8 @@ footer::before {}
     background-size: cover;
     background-position: bottom;
     background-repeat: no-repeat;
+    position: relative;
+    /* để ko bị footer::befor  đè mất nội dung*/
 }
 
 .footer__text,
@@ -810,6 +829,7 @@ footer::before {}
     font-size: 1rem;
     transition: all 0.5s;
 }
+
 .footer__item a:hover {
     color: #fff;
 }
@@ -820,7 +840,8 @@ footer::before {}
 
 .footer__item h3 {
     font-size: 1.5rem;
-    padding-bottom: 10px; /* để chừa chỗ cho pseudo-elements ::before và ::after */
+    padding-bottom: 10px;
+    /* để chừa chỗ cho pseudo-elements ::before và ::after */
     margin-bottom: 30px;
     position: relative;
     /*  relative position cho pseudo-elements */
@@ -852,6 +873,9 @@ footer::before {}
     background-color: #1f343b;
     padding: 10px 0;
     position: relative;
+}
+
+.footer__copyright .container {
     display: flex;
     justify-content: space-between;
 }
@@ -861,12 +885,17 @@ footer::before {}
 }
 
 .footer__copyright a {
-    display: inline-block; /* GIẢI THÍCH */  /* ← Bắt buộc để work */
+    display: inline-block;
+    /* GIẢI THÍCH */
+    /* ← Bắt buộc để work */
     height: 32px;
     width: 32px;
-    line-height: 32px;  /* Center text vertically */
-    text-align: center; /* Center text horizontally */
-    border-radius: 50px; /* Tạo hình tròn */
+    line-height: 32px;
+    /* Center text vertically */
+    text-align: center;
+    /* Center text horizontally */
+    border-radius: 50px;
+    /* Tạo hình tròn */
     font-size: 14px;
     color: white;
     background-color: rgba(255, 255, 255, 0.1);
